color changes and border radius

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,8 +45,8 @@
 
 
 #search input{
-    border: 1px solid black;
-    border-radius: 5px;
+    border: 1px solid yellow;
+    border-radius: 6px;
     
 
 }
@@ -70,7 +70,7 @@
 
 .btn:hover{
     background-color: black;
-    color: white;
+    color: blue;
 }
 
 
